--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tree-sitter = "0.22"
-tree-sitter-rust = "0.21"
+tree-sitter = "0.24.3"
+tree-sitter-rust = "0.23.0"
+streaming-iterator = "0.1.9"
 
 [build-dependencies]
 cc="*"
