--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 tree-sitter = "0.24.3"
 tree-sitter-rust = "0.23.0"
 streaming-iterator = "0.1.9"
+tree-sitter-cpp = "0.23.1"
 
 [build-dependencies]
 cc="*"
