--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ tree-sitter = "0.24.3"
 tree-sitter-rust = "0.23.0"
 streaming-iterator = "0.1.9"
 tree-sitter-cpp = "0.23.1"
+tree-sitter-c = "0.23.1"
+tree-sitter-zig = "1.0.2"
 
 [build-dependencies]
 cc="*"
