--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tree-sitter-cpp = "0.23.1"
 tree-sitter-c = "0.23.1"
 tree-sitter-zig = "1.0.2"
 clap = "4.5.20"
+glob = "0.3.1"
 
 [build-dependencies]
 cc="*"
