--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tree-sitter-c = "0.23.1"
 tree-sitter-zig = "1.0.2"
 clap = "4.5.20"
 glob = "0.3.1"
+lazy_static = "1.5.0"
 
 [build-dependencies]
 cc="*"
